<resources>
    <string name="app_name">SpeerApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oops_user_not_found">Oops!!!User not found</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="description">Description</string>
    <string name="followers_count">Followers Count:</string>
    <string name="following_count">Following Count:</string>
</resources>